# RemoteBash

./: .gitignore  CMakeLists.txt  MyServer.service  client.c  server.c
includes/: Cript.h  Crypt.h  Log.h  Pam_Funcs.h  StringFunctions.h
src/: Log.c  StringFunctions.c  pswd.c
